--- a/Product pagina - Siwani/Product.HTML
+++ b/Product pagina - Siwani/Product.HTML
@@ -5,9 +5,9 @@
      <meta charset="utf-8">
      <meta http-equiv="language" content="NL">
      <meta name="viewport" content="width=device-width" intial-scale="1">
-     <meta name="description" content="HTML pagina">
+     <meta name="description" content="Hyper Monkey smaken">
      <meta name="author" content="Siwani Veerakathy">
-     <meta name="keywords" content="Flexbox 2">
+     <meta name="keywords" content="Verschillende smaken blikjes">
      <link rel="stylesheet" type="text/css" href="CSS/product.css">
      <title>Product | Hyper Monkey</title>
     </head>
