naar html en meer html toegevoegd

--- a/evenementen pagina - Tyler/evenementten.html
+++ b/evenementen pagina - Tyler/evenementten.html
@@ -8,3 +8,28 @@
     <meta name="author" content="Tyler van de steenoven">
     <meta name="keywords" content="artiesten/plaats/">
     <title>hyper-monkey / evenementen pagina</title>
+<head>
+
+<header>
+
+    <img src="IMG/logo.png">
+    <ul>
+  <li><a href="../#home">home</a></li>
+  <li><a href="../Product pagina - Siwani/Product.php">productenpagina</a></li>
+  <li><a href="#faq">FAQ</a></li>
+  <li><a href="#about">About</a></li>
+    </ul>
+
+</header>
+
+<body>
+    
+
+
+
+
+
+
+
+
+</body>
