img and details and summary

--- a/evenementen pagina - Tyler/evenementten.html
+++ b/evenementen pagina - Tyler/evenementten.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="artiesten/plaats/">
     <title>hyper-monkey / evenementen pagina</title>
 <head>
-
+<body>
 <header>
 
     <img src="IMG/logo.png">
@@ -22,8 +22,29 @@
 
 </header>
 
-<body>
-    
+<main>
+    <img src="IMG/Bootcamp.jpg">
+    <img src="IMG/Band-optreden.jpg">
+    <details>
+        <summary>Elvis Presley <br> locatie: noordwijk</summary>
+        <p>krijg de kanker</p>
+    </details>
+
+
+
+
+
+
+
+
+
+</main>
+
+
+
+
+
+
 
 
 
