plaatje en een beetje css

--- a/evenementen pagina - Tyler/evenementten.html
+++ b/evenementen pagina - Tyler/evenementten.html
@@ -7,6 +7,7 @@
     <meta name="description" content="evenemnetenpagina">
     <meta name="author" content="Tyler van de steenoven">
     <meta name="keywords" content="artiesten/plaats/">
+    <link href="CSS/evenementen.css" rel="stylesheet" type="text/css">
     <title>hyper-monkey / evenementen pagina</title>
 <head>
 <body>
@@ -25,9 +26,39 @@
 <main>
     <img src="IMG/Bootcamp.jpg">
     <img src="IMG/Band-optreden.jpg">
+
+
+    <details class="evenement">
+        <summary>
+            <div class="evenementen-artiest-locatie">
+                <section>
+                    <p class="artiest-naam">Elvis Presley</p>
+                    <p class="locatie-plaats">Locatie: noordwijk</p>
+                </section>
+                <section>
+                    <p class="locatie-postcode">Locatie: noordwijk</p>
+                    <p class="locatie-gebouw">Locatie: noordwijk</p>
+                </section>
+            </div>
+        </summary>
+        <section class="evenement-details">
+            <div class="evenement-informatie">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                <img class="locatie-gebouw-foto" src="IMG/Band-optreden.jpg">
+            </div>
+            <div class="evenement-kaart">
+                <img src="IMG/nederzandt.png">
+            </div>
+         </section>
+    </details>
+
+
+
+
     <details>
-        <summary>Elvis Presley <br> locatie: noordwijk</summary>
-        <p>krijg de kanker</p>
+        <summary>tones and I <br> locatie: den haag</summary>
+        <p></p>
+
     </details>
 
 
