--- a/evenementen pagina - Tyler/evenementten.html
+++ b/evenementen pagina - Tyler/evenementten.html
@@ -11,55 +11,61 @@
     <title>hyper-monkey / evenementen pagina</title>
 <head>
 <body>
-<header>
+    <header>
 
-    <img src="IMG/logo.png">
-    <ul>
-  <li><a href="../#home">home</a></li>
-  <li><a href="../Product pagina - Siwani/Product.php">productenpagina</a></li>
-  <li><a href="#faq">FAQ</a></li>
-  <li><a href="#about">About</a></li>
-    </ul>
+    
+        <article id="monk-logo">
+            <a href="#"><img src="IMG/logo.png" alt="logo hyper monkey"></a>
+        </article>
+        <article id="knoppen">
+            <nav>
+                <ul>
+                    <li><a href="#">Producten</a></li>
+                    <li><a href="#">Evenementen</a></li>
+                    <li><a href="#">FAQ</a></li>
+                </ul>
+            </nav>
+        </article>
+    </header>
 
-</header>
+    <main>
+        <section class="banner">
+            <img src="IMG/Bootcamp.jpg">
+            <img id="band" src="IMG/Band-optreden.jpg">
+        </section>
 
-<main>
-    <img src="IMG/Bootcamp.jpg">
-    <img src="IMG/Band-optreden.jpg">
-
-
-    <details class="evenement">
-        <summary>
-            <div class="evenementen-artiest-locatie">
-                <section>
-                    <p class="artiest-naam">Elvis Presley</p>
-                    <p class="locatie-plaats">Locatie: noordwijk</p>
-                </section>
-                <section>
-                    <p class="locatie-postcode">Locatie: noordwijk</p>
-                    <p class="locatie-gebouw">Locatie: noordwijk</p>
-                </section>
-            </div>
-        </summary>
-        <section class="evenement-details">
-            <div class="evenement-informatie">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
-                <img class="locatie-gebouw-foto" src="IMG/Band-optreden.jpg">
-            </div>
-            <div class="evenement-kaart">
-                <img src="IMG/nederzandt.png">
-            </div>
-         </section>
-    </details>
-
+        <details class="evenement">
+            <summary>
+                <div class="evenementen-artiest-locatie">
+                    <section>
+                        <p class="artiest-naam">Elvis Presley</p>
+                        <p class="locatie-plaats">Locatie: noordwijk</p>
+                    </section>
+                    <section>
+                        <p class="locatie-postcode">Locatie: noordwijk</p>
+                        <p class="locatie-gebouw">Locatie: noordwijk</p>
+                    </section>
+                </div>
+            </summary>
+            <section class="evenement-details">
+                <div class="evenement-informatie">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                    <img class="locatie-gebouw-foto" src="IMG/Band-optreden.jpg">
+                </div>
+                <div class="evenement-kaart">
+                    <img src="IMG/nederzandt.png">
+                </div>
+            </section>
+        </details>
 
 
 
-    <details>
-        <summary>tones and I <br> locatie: den haag</summary>
-        <p></p>
 
-    </details>
+        <details>
+            <summary>tones and I <br> locatie: den haag</summary>
+            <p></p>
+
+        </details>
 
 
 
@@ -71,8 +77,19 @@
 
 </main>
 
-
-
+<footer>
+    <article>
+        <p><a href="#">Agenda</a></p>
+    </article>
+    <article>
+    <a href="https://www.facebook.com/" target="_blank"><img src="IMG/facebook.png"></a>
+    <a href="https://www.instagram.com/" target="_blank"><img src="IMG/instagram.png"></a>
+    <a href="https://twitter.com/?lang=nl " target="_blank"><img src="IMG/twitter.png"></a>
+</article>
+<article>
+    <p><a href="https://www.fit.nl/voeding/energiedrank-ongezond" target="_blank">Informatie</a></p>
+</article>
+</footer>
 
 
 
