--- a/evenementen pagina - Tyler/evenementten.html
+++ b/evenementen pagina - Tyler/evenementten.html
@@ -42,8 +42,8 @@
                         <p class="locatie-plaats">Locatie: noordwijk</p>
                     </section>
                     <section>
-                        <p class="locatie-postcode">Locatie: noordwijk</p>
-                        <p class="locatie-gebouw">Locatie: noordwijk</p>
+                        <p class="locatie-postcode">datum: 20-06-2021</p>
+                        <p class="locatie-gebouw">maximale bezoekers: 1000</p>
                     </section>
                 </div>
             </summary>
