height width two pictures

--- a/evenementen pagina - Tyler/evenementten.html
+++ b/evenementen pagina - Tyler/evenementten.html
@@ -42,14 +42,14 @@
                         <p class="locatie-plaats">Locatie: noordwijk</p>
                     </section>
                     <section>
-                        <p class="locatie-postcode">datum: 20-06-2021</p>
+                        <p class="locatie-datum">datum: 20-06-2021</p>
                         <p class="locatie-gebouw">maximale bezoekers: 1000</p>
                     </section>
                 </div>
             </summary>
             <section class="evenement-details">
                 <div class="evenement-informatie">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                    <p>postcode: 6969gr </p>
                     <img class="locatie-gebouw-foto" src="IMG/Band-optreden.jpg">
                 </div>
                 <div class="evenement-kaart">
