css margin and html class change

--- a/evenementen pagina - Tyler/evenementten.html
+++ b/evenementen pagina - Tyler/evenementten.html
@@ -43,7 +43,7 @@
                     </section>
                     <section>
                         <p class="locatie-datum">datum: 20-06-2021</p>
-                        <p class="locatie-gebouw">maximale bezoekers: 1000</p>
+                        <p class="locatie-max-bezoekers">maximale bezoekers: 1000</p>
                     </section>
                 </div>
             </summary>
