--- a/evenementen pagina - Tyler/evenementten.html
+++ b/evenementen pagina - Tyler/evenementten.html
@@ -39,17 +39,18 @@
                 <div class="evenementen-artiest-locatie">
                     <section>
                         <p class="artiest-naam">Elvis Presley</p>
-                        <p class="locatie-plaats">Locatie: noordwijk</p>
+                        <p class="locatie-datum">datum: 20-06-2021</p>
                     </section>
                     <section>
-                        <p class="locatie-datum">datum: 20-06-2021</p>
+                        
                         <p class="locatie-max-bezoekers">maximale bezoekers: 1000</p>
                     </section>
                 </div>
             </summary>
             <section class="evenement-details">
                 <div class="evenement-informatie">
-                    <p>postcode: 6969gr </p>
+                    <p class="locatie-plaats-postcode">locatie:noordwijk 6969gr </p>
+                    <p class="telefoon-nummer"
                     <img class="locatie-gebouw-foto" src="IMG/Band-optreden.jpg">
                 </div>
                 <div class="evenement-kaart">
